--- a/defi-staking-app-starter/package.json
+++ b/defi-staking-app-starter/package.json
@@ -44,5 +44,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-react": "^7.30.0"
+  }
 }
